--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h2>Work Experience</h2>
     </div>
     <div id="projects">
-      <h2>Projects</h2>
+      <h2>Projectss</h2>
     </div>
     <div id="education" class="gray">
       <h2>Education</h2>
