--- a/index.html
+++ b/index.html
@@ -16,17 +16,14 @@
       <ul id="topContacts" class="flex-box"></ul>
     </div>
     <div style="clear: both;"></div>
-    <div id="workExperience" class="gray">
+    <div id="workExperience" class="content-box gray">
       <h2>Work Experience</h2>
     </div>
-    <div id="projects">
-      <h2>Projectss</h2>
+    <div id="projects" class="content-box gray">
+      <h2>Projects</h2>
     </div>
-    <div id="education" class="gray">
+    <div id="education" class="content-box gray">
       <h2>Education</h2>
-    </div>
-    <div id="mapDiv">
-      <h2>Where I've Lived and Worked</h2>
     </div>
     <div id="lets-connect" class="dark-gray">
       <h2 class="orange center-text">Let's Connect</h2>
@@ -77,9 +74,6 @@
     }
     if(document.getElementsByClassName('flex-item').length === 0) {
       document.getElementById('lets-connect').style.backgroundColor = 'black';
-    }
-    if(document.getElementById('map') === null) {
-      document.getElementById('mapDiv').style.backgroundColor = 'black';
     }
   </script>
 </body>
