added new background, modified some work description

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width">
 </head>
 <body>
+	<img src="images/grey-geo.jpg" id="bg" alt="">
   <div id="main">
     <div id="header" class="center-content clear-fix">
       <ul id="topContacts" class="flex-box"></ul>
