--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>Resume</title>
-
+	<link href="https://fonts.googleapis.com/css?family=Kavoon" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <script src="js/jQuery.js"></script>
   <script src="js/helper.js"></script>
