added circle linked in sprite, moved around header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 	<img src="images/grey-geo.jpg" id="bg" alt="">
   <div id="main">
     <div id="header" class="center-content clear-fix">
-      <ul id="topContacts" class="flex-box"></ul>
+		<div id="headerBox" class="flex-box">
+			<ul id="topContacts" class="flex-box" style="flex-direction:column;"></ul>
+		</div>
     </div>
     <div style="clear: both;"></div>
     <div id="workExperience" class="content-box gray">
