--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 		</div>
     </div>
     <div style="clear: both;"></div>
-    <div id="workExperience" class="content-box gray">
-      <h2>Work Experience</h2>
-    </div>
-    <div id="projects" class="content-box gray">
+	<div id="projects" class="content-box">
       <h2>Projects</h2>
     </div>
-    <div id="education" class="content-box gray">
+    <div id="workExperience" class="content-box">
+      <h2>Work Experience</h2>
+    </div>
+    <div id="education" class="content-box">
       <h2>Education</h2>
     </div>
     <div id="lets-connect" class="dark-gray">
