added project title and nav bar

--- a/resume.html
+++ b/resume.html
@@ -14,6 +14,20 @@
 
 <img src="images/grey-geo.jpg" id="bg" alt="">
 
+<nav class="navbar navbar-default" style="margin-bottom:0;">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Page 1</a></li>
+      <li><a href="#">Page 2</a></li>
+      <li><a href="#">Page 3</a></li>
+    </ul>
+  </div>
+</nav>
+
 <div class="jumbotron">
   <div class="container text-center">
     <h1>Stephen Shilale</h1>      
@@ -28,8 +42,8 @@
 </div>
 
 <div class="container-fluid bg-4 text-center">
-	<h1 style="font-weight: bold;" >Some of my Work</h1><br>
-	<div class="row">
+	<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-briefcase"></span> My Projects</h1><br>
+	<div class="row even">
 		<div class="col-sm-12">
 			<h2>T-E-Pitch</h2>
 		</div>
