--- a/resume.html
+++ b/resume.html
@@ -12,9 +12,10 @@
 </head>
 <body>
 
+<!-- https://github.com/BlackrockDigital/startbootstrap-scrolling-nav -->
 <img src="images/grey-geo.jpg" id="bg" alt="">
 
-<nav class="navbar navbar-default" style="margin-bottom:0;">
+<nav class="navbar navbar-default navbar-fixed-top" style="margin-bottom:0;">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">WebSiteName</a>
