--- a/resume.html
+++ b/resume.html
@@ -2,32 +2,62 @@
 <html lang="en">
 <head>
   <title>Testing</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href="style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Kavoon|Titillium+Web" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+	<!-- Bootstrap Core CSS -->
+	<link href="lib/bootstrap.min.css" rel="stylesheet">
+
+	<!-- Custom CSS -->
+	<link href="lib/scrolling-nav.css" rel="stylesheet">
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link href="style.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Kavoon|Titillium+Web" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
 <!-- https://github.com/BlackrockDigital/startbootstrap-scrolling-nav -->
 <img src="images/grey-geo.jpg" id="bg" alt="">
 
-<nav class="navbar navbar-default navbar-fixed-top" style="margin-bottom:0;">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
-    </ul>
-  </div>
-</nav>
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a class="page-scroll" href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#services">Services</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
 <div class="jumbotron">
   <div class="container text-center">
@@ -57,19 +87,21 @@
 			<h4>Wrote a real time multiplayer card game using modern web technologies</h4>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-sm-12">
-			<h2>Neighborhood Map</h2>
-		</div>
-		<div class="col-sm-5">	
-			<div style="max-width:350px;">
-				<img class="project-img" src="images/mapdesk.jpg">
+	<section id="about" class="about-section">
+		<div class="row">
+			<div class="col-sm-12">
+				<h2>Neighborhood Map</h2>
+			</div>
+			<div class="col-sm-5">	
+				<div style="max-width:350px;">
+					<img class="project-img" src="images/mapdesk.jpg">
+				</div>
+			</div>
+			<div class="col-sm-5">
+				<h4>Created an interactive map of Anchorage Alaska</h4>
 			</div>
 		</div>
-		<div class="col-sm-5">
-			<h4>Created an interactive map of Anchorage Alaska</h4>
-		</div>
-	</div>
+	</section>
 	<div class="row">	
 		<div class="col-sm-12">
 			<h2>Solar Array Dashboard</h2>
@@ -85,4 +117,15 @@
 	</div>
 </div>
 </body>
+
+	<!-- jQuery -->
+    <script src="lib/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="lib/bootstrap.min.js"></script>
+
+    <!-- Scrolling Nav JavaScript -->
+    <script src="lib/jquery.easing.min.js"></script>
+    <script src="lib/scrolling-nav.js"></script>
+
 </html>
