added to all 3 projects

--- a/resume.html
+++ b/resume.html
@@ -92,11 +92,11 @@
 			<h4>Implemented Node, Express, and Socket.io on the back end, using websockets for a simplistic and smooth multiplayer engine, efficiently handling many games at once</h4>
 		</div>
 		<div class="col-sm-4">
-			<div id="grey-anim" class="column-sports"></div>
+			<div id="pitch-bars" class="column-sports"></div>
 		</div>
 	</div>
-	<section id="about" class="about-section">
-		<div class="row">
+	<section>
+		<div class="row odd">
 			<div class="col-sm-12">
 				<h2>Neighborhood Map</h2>
 			</div>
@@ -108,9 +108,12 @@
 			<div class="col-sm-4">
 				<h4>Created an interactive map of Anchorage Alaska</h4>
 			</div>
+			<div class="col-sm-4">
+				<div id="map-bars" class="column-sports"></div>
+			</div>
 		</div>
 	</section>
-	<div class="row">	
+	<div class="row even">	
 		<div class="col-sm-12">
 			<h2>Solar Array Dashboard</h2>
 		</div>
@@ -122,7 +125,13 @@
 		<div class="col-sm-4">
 			<h4>Dashboard containng relevant solar panel information</h4>
 		</div>
+		<div class="col-sm-4">
+			<div id="dash-bars" class="column-sports"></div>
+		</div>
 	</div>
+</div>
+
+<div class="container-fluid">Hey
 </div>
 </body>
 
