added links to projects

--- a/resume.html
+++ b/resume.html
@@ -79,7 +79,7 @@
 	<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-briefcase"></span> My Projects</h1><br>
 	<div class="row even">
 		<div class="col-sm-12">
-			<h2>T-E-Pitch</h2>
+			<h2><a href="http://www.tepitch.com">T-E-Pitch</a></h2>
 		</div>
 		<div class="col-sm-4" style="text-align: -webkit-center;">	
 			<div style="max-width:350px;">
@@ -98,7 +98,7 @@
 	<section>
 		<div class="row odd">
 			<div class="col-sm-12">
-				<h2>Neighborhood Map</h2>
+				<h2><a href="http://sshilal1.github.io/neighborhoodMap/">Neighborhood Map</a></h2>
 			</div>
 			<div class="col-sm-4" style="text-align: -webkit-center;">	
 				<div style="max-width:350px;">
@@ -115,7 +115,7 @@
 	</section>
 	<div class="row even">	
 		<div class="col-sm-12">
-			<h2>Solar Array Dashboard</h2>
+			<h2><a href="http://sshilal1.github.io/srDesignKiosk/">Solar Array Dashboard</a></h2>
 		</div>
 		<div class="col-sm-4" style="text-align: -webkit-center;">	
 			<div style="max-width:350px;">
