added coming soon, adjusted css

--- a/resume.html
+++ b/resume.html
@@ -87,9 +87,10 @@
 			</div>
 		</div>
 		<div class="col-sm-4">
-			<h4>Wrote a real time multiplayer card game using modern web technologies</h4>
+			<h3>A real-time, multiplayer card game.</h3>
+			<p>Play against your friends across the world or against logical AI!<br>
+			Implemented Node, Express, and Socket.io on the back end, using websockets for a simplistic and smooth multiplayer engine, efficiently handling many games at once</p>
 			<h4>Integrated many Javascript frameworks for a modern, responsive, and up-to-date mobile friendly front end</h4>
-			<h4>Implemented Node, Express, and Socket.io on the back end, using websockets for a simplistic and smooth multiplayer engine, efficiently handling many games at once</h4>
 		</div>
 		<div class="col-sm-4">
 			<div id="pitch-bars" class="column-sports"></div>
@@ -127,6 +128,23 @@
 		</div>
 		<div class="col-sm-4">
 			<div id="dash-bars" class="column-sports"></div>
+		</div>
+	</div>
+	<div class="row odd">	
+		<div class="col-sm-12">
+			<h2>Fantasy Draft Kit</h2>
+		</div>
+		<div class="col-sm-4" style="text-align: -webkit-center;">	
+			<div style="max-width:350px;">
+				<div class="project-img"><div id="comingsoon">Coming Soon<br>Currently In Development</div></div>
+			</div>
+		</div>
+		<div class="col-sm-4">
+			<h4>A fantasy football draft kit</h4>
+			<p>Scrape the web for fantasy football rankings, and organize players and stats for an easy draft kit</p>
+		</div>
+		<div class="col-sm-4">
+			<div id="draft-bars" class="column-sports"></div>
 		</div>
 	</div>
 </div>
