added jumbotron footer at bottom

--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Testing</title>
+  <title>Stephen Shilale: Web Developer</title>
 
 	<!-- Bootstrap Core CSS -->
 	<link href="lib/bootstrap.min.css" rel="stylesheet">
@@ -21,9 +21,10 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<!-- <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top"> -->
 
 <!-- https://github.com/BlackrockDigital/startbootstrap-scrolling-nav -->
+<body>
 <img src="images/grey-geo.jpg" id="bg" alt="">
 
     <!-- Navigation
@@ -77,6 +78,7 @@
 
 <div class="container-fluid bg-4 text-center">
 	<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-briefcase"></span> My Projects</h1><br>
+	<h3> Just some things I have worked on in my spare time.</h3>
 	<div class="row even">
 		<div class="col-sm-12">
 			<h2><a href="http://www.tepitch.com">T-E-Pitch</a></h2>
@@ -149,8 +151,13 @@
 	</div>
 </div>
 
-<div class="container-fluid">Hey
+<div class="jumbotron" style="margin: 0;">
+  <div class="container text-center">
+	<h4><span class="glyphicon glyphicon-copyright-mark"></span> Stephen Shilale</h4>
+	<h4>2017</h4>
+  </div>
 </div>
+
 </body>
 
 	<!-- jQuery -->
