added page navigation and about page

--- a/resume.html
+++ b/resume.html
@@ -3,20 +3,16 @@
 <head>
   <title>Stephen Shilale: Web Developer</title>
 
-	<!-- Bootstrap Core CSS -->
-	<link href="lib/bootstrap.min.css" rel="stylesheet">
-
-	<!-- Custom CSS -->
-	<link href="lib/scrolling-nav.css" rel="stylesheet">
-
 	<!-- Custom CSS -->
 	<link href="lib/servicebars.css" rel="stylesheet">
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="style.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kavoon|Titillium+Web" rel="stylesheet">
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -63,22 +59,21 @@
       
     </nav> -->
 
-<div class="jumbotron">
-  <div class="container text-center">
-    <h1>Stephen Shilale</h1>      
-    <h2>Full Stack Web Developer</h2>
-	<div class="container-fluid bg-3 text-center">
-		<a href="http://github.com/sshilal1"><img class="logo-sprite" style="filter: grayscale(1) invert(1);" src="images/github-sprite.png"></a>
-		<a href="https://www.linkedin.com/in/stephen-shilale-10237169"><img class="logo-sprite" src="images/linkedin-sprite.png"></a>
+<nav class="navbar navbar-default">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="#">Stephen Shilale</a>
+		</div>
+		<ul class="nav navbar-nav">
+			<li><a href="about.html">Home</a></li>
+			<li class="active"><a href="resume.html">Projects</a></li>
+		</ul>
 	</div>
-	<h4><span class="glyphicon glyphicon-envelope"></span> stephen.shilale@gmail.com</h4>
-	<h4><span class="glyphicon glyphicon-map-marker"></span> New York City, NY</h4>
-  </div>
-</div>
+</nav>
 
 <div class="container-fluid bg-4 text-center">
 	<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-briefcase"></span> My Projects</h1><br>
-	<h3> Just some things I have worked on in my spare time.</h3>
+	<h3> Just some of things I have worked on in my spare time.</h3>
 	<div class="row even">
 		<div class="col-sm-12">
 			<h2><a href="http://www.tepitch.com">T-E-Pitch</a></h2>
@@ -159,16 +154,6 @@
 </div>
 
 </body>
-
-	<!-- jQuery -->
-    <script src="lib/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="lib/bootstrap.min.js"></script>
-
-    <!-- Scrolling Nav JavaScript -->
-    <script src="lib/jquery.easing.min.js"></script>
-    <script src="lib/scrolling-nav.js"></script>
 
     <!-- My Service Bars -->
 	<script src="lib/servicebars.js"></script>    
