--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <body>
 <img src="images/grey-geo.jpg" id="bg" alt="">
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#">Stephen Shilale</a>
