--- a/resume.html
+++ b/resume.html
@@ -59,7 +59,7 @@
       
     </nav> -->
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#">Stephen Shilale</a>
