--- a/index.html
+++ b/index.html
@@ -1,83 +1,77 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Resume</title>
-	<link href="https://fonts.googleapis.com/css?family=Kavoon" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-  <script src="js/jQuery.js"></script>
-  <script src="js/helper.js"></script>
-  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
-  
-  <meta name="viewport" content="width=device-width">
+  <title>About Me</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link href="style.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Kavoon|Titillium+Web" rel="stylesheet">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
+<!-- <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top"> -->
+
+<!-- https://github.com/BlackrockDigital/startbootstrap-scrolling-nav -->
 <body>
-	<img src="images/grey-geo.jpg" id="bg" alt="">
-  <div id="main">
-    <div id="header" class="center-content clear-fix">
-		<div id="headerBox" class="flex-box">
-			<ul id="topContacts" class="flex-box" style="flex-direction:column;"></ul>
+<img src="images/grey-geo.jpg" id="bg" alt="">
+
+<nav class="navbar navbar-default navbar-fixed-top">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="#">Stephen Shilale</a>
 		</div>
-    </div>
-    <div style="clear: both;"></div>
-	<div id="projects" class="content-box">
-      <h2>Projects</h2>
-    </div>
-    <div id="workExperience" class="content-box">
-      <h2>Work Experience</h2>
-    </div>
-    <div id="education" class="content-box">
-      <h2>Education</h2>
-    </div>
-    <div id="lets-connect" class="dark-gray">
-      <h2 class="orange center-text">Let's Connect</h2>
-        <ul id="footerContacts" class="flex-box">
-      </ul>
-    </div>
+		<ul class="nav navbar-nav">
+			<li class="active"><a href="about.html">Home</a></li>
+			<li><a href="resume.html">Projects</a></li>
+		</ul>
+	</div>
+</nav>
+
+<div class="jumbotron">
+  <div class="container text-center">
+    <h1>Stephen Shilale</h1>      
+    <h2>Full Stack Web Developer</h2>
+	<div class="container-fluid bg-3 text-center">
+		<a href="http://github.com/sshilal1"><img class="logo-sprite" style="filter: grayscale(1) invert(1);" src="images/github-sprite.png"></a>
+		<a href="https://www.linkedin.com/in/stephen-shilale-10237169"><img class="logo-sprite" src="images/linkedin-sprite.png"></a>
+	</div>
+	<h4><span class="glyphicon glyphicon-envelope"></span> stephen.shilale@gmail.com</h4>
+	<h4><span class="glyphicon glyphicon-map-marker"></span> New York City, NY</h4>
   </div>
-  <script src="js/resumeBuilder.js"></script>
+</div>
 
+<div class="container-fluid bg-4 text-center">
+	<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-user"></span> About Me</h1><br>
+	<h3>Hi, My name is Stephen, and I am an avid full stack web developer</h3>
+	<div class="row odd">	
+		<div class="col-sm-12">
+			<h2>Fantasy Draft Kit</h2>
+		</div>
+		<div class="col-sm-4" style="text-align: -webkit-center;">	
+			<div style="max-width:350px;">
+				<div class="project-img"><div id="comingsoon">Coming Soon<br>Currently In Development</div></div>
+			</div>
+		</div>
+		<div class="col-sm-4">
+			<h4>A fantasy football draft kit</h4>
+			<p>Scrape the web for fantasy football rankings, and organize players and stats for an easy draft kit</p>
+		</div>
+		<div class="col-sm-4">
+			<div id="draft-bars" class="column-sports"></div>
+		</div>
+	</div>
+</div>
 
-  <!--
-  These scripts are written in JavaScript. You'll be breaking them down as part of
-  a quiz. Essentially, the next few lines are checking to see if you have not
-  changed each section of the resume. If you have not made any changes to a section
-  of the resume, then that part of the resume does not show up. More on this in the
-  course.
-  -->
+<div class="jumbotron" style="margin: 0;">
+  <div class="container text-center">
+	<h4><span class="glyphicon glyphicon-copyright-mark"></span> Stephen Shilale</h4>
+	<h4>2017</h4>
+  </div>
+</div>
 
-  <script type="text/javascript">
-    // Notice how all of a sudden there's JavaScript inside this HTML
-    // document? You can write JavaScript between <script> tags. At the end of your
-    // JavaScript, don't forget the closing script tag with the slash (/).
-
-
-    // Also, this is a JavaScript style comment. You can comment in JavaScript with:
-
-    //   two slashes for all following characters on a single line, or
-
-    /*
-        an opening and closing set of slash asterisks for block comments.
-    */
-
-
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('topContacts').style.backgroundColor = 'black';
-    }
-    if(document.getElementsByTagName('h1').length === 0) {
-      document.getElementById('header').style.backgroundColor = 'black';
-    }
-    if(document.getElementsByClassName('work-entry').length === 0) {
-      document.getElementById('workExperience').style.backgroundColor = 'black';
-    }
-    if(document.getElementsByClassName('project-entry').length === 0) {
-      document.getElementById('projects').style.backgroundColor = 'black';
-    }
-    if(document.getElementsByClassName('education-entry').length === 0) {
-      document.getElementById('education').style.backgroundColor = 'black';
-    }
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('lets-connect').style.backgroundColor = 'black';
-    }
-  </script>
 </body>
 </html>
