finalized navbar, added mobile toggle, added candid pic

--- a/index.html
+++ b/index.html
@@ -22,12 +22,20 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="#">Stephen Shilale</a>
+			<a class="navbar-brand" href="index.html">Stephen Shilale</a>
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+	            <span class="sr-only">Toggle navigation</span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	        </button>
 		</div>
-		<ul class="nav navbar-nav">
-			<li class="active"><a href="about.html">Home</a></li>
-			<li><a href="resume.html">Projects</a></li>
-		</ul>
+		<div class="collapse navbar-collapse navbar-ex1-collapse">
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="index.html">Home</a></li>
+				<li><a href="projects.html">Projects</a></li>
+			</ul>
+		</div>
 	</div>
 </nav>
 
@@ -46,24 +54,9 @@
 
 <div class="container-fluid bg-4 text-center">
 	<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-user"></span> About Me</h1><br>
-	<h3>Hi, My name is Stephen, and I am an avid full stack web developer</h3>
-	<div class="row odd">	
-		<div class="col-sm-12">
-			<h2>Fantasy Draft Kit</h2>
-		</div>
-		<div class="col-sm-4" style="text-align: -webkit-center;">	
-			<div style="max-width:350px;">
-				<div class="project-img"><div id="comingsoon">Coming Soon<br>Currently In Development</div></div>
-			</div>
-		</div>
-		<div class="col-sm-4">
-			<h4>A fantasy football draft kit</h4>
-			<p>Scrape the web for fantasy football rankings, and organize players and stats for an easy draft kit</p>
-		</div>
-		<div class="col-sm-4">
-			<div id="draft-bars" class="column-sports"></div>
-		</div>
-	</div>
+	<h3>Hi, My name is Stephen, and I am an avid web developer</h3>
+	<img src="images/self2.jpg" style="width: 200px; border-radius: 10px;">
+	<h3>Come checkout my <a href="projects.html">Projects</a> page to see what I've done on the web</h3>
 </div>
 
 <div class="jumbotron" style="margin: 0;">
