--- a/projects.html
+++ b/projects.html
@@ -62,12 +62,20 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="#">Stephen Shilale</a>
+			<a class="navbar-brand" href="index.html">Stephen Shilale</a>
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+	            <span class="sr-only">Toggle navigation</span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	        </button>
 		</div>
-		<ul class="nav navbar-nav">
-			<li><a href="about.html">Home</a></li>
-			<li class="active"><a href="resume.html">Projects</a></li>
-		</ul>
+		<div class="collapse navbar-collapse navbar-ex1-collapse">
+			<ul class="nav navbar-nav">
+				<li><a href="index.html">Home</a></li>
+				<li class="active"><a href="projects.html">Projects</a></li>
+			</ul>
+		</div>
 	</div>
 </nav>
 
