--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="index.html">Stephen Shilale</a>
+			<a class="navbar-brand" href="index">Stephen Shilale</a>
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 	            <span class="sr-only">Toggle navigation</span>
 	            <span class="icon-bar"></span>
@@ -32,8 +32,8 @@
 		</div>
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="index.html">Home</a></li>
-				<li><a href="projects.html">Projects</a></li>
+				<li class="active"><a href="index">Home</a></li>
+				<li><a href="projects">Projects</a></li>
 			</ul>
 		</div>
 	</div>
