--- a/public/projects.html
+++ b/public/projects.html
@@ -62,7 +62,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="index">Stephen Shilale</a>
+			<a class="navbar-brand" href="/">Stephen Shilale</a>
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 	            <span class="sr-only">Toggle navigation</span>
 	            <span class="icon-bar"></span>
@@ -72,7 +72,7 @@
 		</div>
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="index">Home</a></li>
+				<li><a href="/">Home</a></li>
 				<li class="active"><a href="projects">Projects</a></li>
 			</ul>
 		</div>
