--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="/">Home</a></li>
 				<li><a href="projects">Projects</a></li>
+				<li><a href="blog">Blog</a></li>
 			</ul>
 		</div>
 	</div>
