--- a/public/projects.html
+++ b/public/projects.html
@@ -74,6 +74,7 @@
 			<ul class="nav navbar-nav">
 				<li><a href="/">Home</a></li>
 				<li class="active"><a href="projects">Projects</a></li>
+				<li><a href="blog">Blog</a></li>
 			</ul>
 		</div>
 	</div>
