--- a/public/about.html
+++ b/public/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Stephen Shilale</title>
+  <title>About Me</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,13 +13,16 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
+<!-- <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top"> -->
+
+<!-- https://github.com/BlackrockDigital/startbootstrap-scrolling-nav -->
 <body>
 <img src="images/grey-geo.jpg" id="bg" alt="">
 
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a class="navbar-brand active" href="/">Stephen Shilale</a>
+			<a class="navbar-brand" href="/">Stephen Shilale</a>
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 	            <span class="sr-only">Toggle navigation</span>
 	            <span class="icon-bar"></span>
@@ -51,30 +54,10 @@
 </div>
 
 <div class="container-fluid bg-4 text-center">
-	<h2>Hi, My name is Stephen, and I am a Javascript Developer</h2>
-	<h3>I am looking to apply all the newest web technologies to both ends of the stack</h3>
-	<h3>My current favorite tools and toys on the web:</h3>
-	
-	<div class="row">
-		<div class="col-md-6">
-			<h2><span class="glyphicon glyphicon-wrench"></span> Technologies</h2>
-			<a href="https://developer.mozilla.org/en-US/docs/Glossary/jQuery"><img class="webtech-img" style="max-width:90px" src="images/html-css-jquery-sprite.png"></a>
-			<a href="https://socket.io/"><img class="webtech-img" style="max-width:110px" src="images/socketio-sprite.png"></a>
-			<a href="https://nodejs.org/en/"><img class="webtech-img" style="max-width:100px" src="images/node-sprite.png"></a>
-			<a href="https://www.npmjs.com/"><img class="webtech-img" style="max-width:100px" src="images/npm-sprite.png"></a>
-			<a href="https://aws.amazon.com/"><img class="webtech-img" style="max-width:100px" src="images/aws-sprite.png"></a>
-			<a href="http://getbootstrap.com/"><img class="webtech-img" style="max-width:100px" src="images/bootstrap-sprite.png"></a>
-			<a href="https://facebook.github.io/react/"><img class="webtech-img" style="max-width:100px" src="images/react-sprite.png"></a>
-			<a href="http://www.material-ui.com/#/"><img class="webtech-img" style="max-width:100px" src="images/materialui-sprite.png"></a>
-			<a href="https://www.raspberrypi.org/"><img class="webtech-img" style="max-width:100px" src="images/raspi-sprite.png"></a>
-		</div>
-		
-		<div class="col-md-6">
-			<h2><span class="glyphicon glyphicon-blackboard"></span> Showcase</h2>
-		</div>
-	</div>
-	
-	<h3>Checkout my <a href="projects"><span class="glyphicon glyphicon-briefcase"></span> Projects</a> to see what else I've done on the web</h3>
+	<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-user"></span> About Me</h1><br>
+	<h3>Hi, My name is Stephen, and I am an avid web developer</h3>
+	<img src="images/self3.jpg" style="width: 200px; border-radius: 10px;">
+	<h3>Come checkout my <a href="projects.html">Projects</a> page to see what I've done on the web</h3>
 </div>
 
 <div class="jumbotron" style="margin: 0;">
