added knockout img

--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
 			<a href="http://getbootstrap.com/"><img class="webtech-img" style="max-width:100px" src="images/bootstrap-sprite.png"></a>
 			<a href="https://facebook.github.io/react/"><img class="webtech-img" style="max-width:100px" src="images/react-sprite.png"></a>
 			<a href="http://www.material-ui.com/#/"><img class="webtech-img" style="max-width:100px" src="images/materialui-sprite.png"></a>
+			<a href="http://knockoutjs.com/"><img class="webtech-img" style="max-width:100px" src="images/knockout-sprite.png"></a>
 			<a href="https://www.raspberrypi.org/"><img class="webtech-img" style="max-width:100px" src="images/raspi-sprite.png"></a>
 		</div>
 		
