added to the main page showcase

--- a/public/index.html
+++ b/public/index.html
@@ -72,10 +72,15 @@
 		
 		<div class="col-md-6">
 			<h2><span class="glyphicon glyphicon-blackboard"></span> Showcase</h2>
+
+			<img style="max-width:170px; max-height:105px;" src="images/pitch2.jpg">
+			<h3>T-E-Pitch <small> : A real time multiplayer card game</small> </h3>
+			<p>Written over the span of the past year, it started out as a simple game to teach myself <code>jQuery</code>, and has evolved into a massive project involving more than Ten JavaScript frameworks! </p>
+			<p>Play now at <span class="glyphicon glyphicon-king"></span><a href="http://www.tepitch.com"> Tepitch.com</a></p>
 		</div>
 	</div>
 	
-	<h3>Checkout my <a href="projects"><span class="glyphicon glyphicon-briefcase"></span> Projects</a> to see what else I've done on the web</h3>
+	<h3 style="padding:40px 0;">Checkout the <a href="projects"><span class="glyphicon glyphicon-briefcase"></span> Projects</a> page to see what else I've done on the web</h3>
 </div>
 
 <div class="jumbotron" style="margin: 0;">
