adding content to pages

--- a/public/about.html
+++ b/public/about.html
@@ -32,32 +32,29 @@
 		</div>
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="/">Home</a></li>
+				<li><a href="/">Home</a></li>
 				<li><a href="projects">Projects</a></li>
+				<li class="active"><a href="about">About</a></li>
 				<li><a href="blog">Blog</a></li>
 			</ul>
 		</div>
 	</div>
 </nav>
 
-<div class="jumbotron">
-  <div class="container text-center">
-    <h1>Stephen Shilale</h1>      
-    <h2>Full Stack Web Developer</h2>
-	<div class="container-fluid bg-3 text-center">
-		<a href="http://github.com/sshilal1"><img class="logo-sprite" style="filter: grayscale(1) invert(1);" src="images/github-sprite.png"></a>
-		<a href="https://www.linkedin.com/in/stephen-shilale-10237169"><img class="logo-sprite" src="images/linkedin-sprite.png"></a>
+<div class="row">
+	<div class="col-sm-2"></div>
+	<div class="col-sm-8 text-center">
+		<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-user"></span> About Me</h1><br>
+		<h2>Hi, My name is Stephen, and I am an avid web developer</h2>
+		<p class="lead">I am an eager Javascript programmer, with a strong background in software development.
+		Graduating from Binghamton University, I have been a Verification Engineer for the past 2 years, so test-driven development is important to my projects.
+		My interest in web development started my Sr year of college, when our team had to design a dashboard panel for the Engineering and Science Building at the
+		School. I have been learning Javascript, HTML, and CSS ever since.
+		</p>
+		<img src="images/self3.jpg" style="width: 200px; border-radius: 10px;">
+		<p class="lead">When Im not writing code, I also enjoy Skiing, Golfing, Monitoring Stocks, The NYMets and NYGiants</p>
 	</div>
-	<h4><span class="glyphicon glyphicon-envelope"></span> stephen.shilale@gmail.com</h4>
-	<h4><span class="glyphicon glyphicon-map-marker"></span> New York City, NY</h4>
-  </div>
-</div>
-
-<div class="container-fluid bg-4 text-center">
-	<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-user"></span> About Me</h1><br>
-	<h3>Hi, My name is Stephen, and I am an avid web developer</h3>
-	<img src="images/self3.jpg" style="width: 200px; border-radius: 10px;">
-	<h3>Come checkout my <a href="projects.html">Projects</a> page to see what I've done on the web</h3>
+	<div class="col-sm-2"></div>
 </div>
 
 <div class="jumbotron" style="margin: 0;">
