--- a/public/blog.html
+++ b/public/blog.html
@@ -34,6 +34,7 @@
 			<ul class="nav navbar-nav">
 				<li><a href="/">Home</a></li>
 				<li><a href="projects">Projects</a></li>
+				<li><a href="about">About</a></li>
 				<li class="active"><a href="blog">Blog</a></li>
 			</ul>
 		</div>
@@ -41,14 +42,16 @@
 </nav>
 
 <div class="container-fluid text-center">
-	<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-briefcase"></span> Blog</h1><br>
+	<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-pencil"></span>Blog</h1><br>
 	<h3> My thoughts on the world around us</h3>
 </div>
 	
 <div class="row" style="margin:0;">
 	<div class="col-sm-2"></div>
-	<div class="container-fluid col-sm-8 even">
-	
+	<div class="container-fluid col-sm-8 even text-center">
+		<h2>Nothing here yet</h2>
+		<h3>Stay tuned!</h3>
+		<!--
 		<article>
 			<h2>Hosting your site on a Raspberry Pi using Node.js</h2>
 		 
@@ -73,7 +76,7 @@
 		 
 			<hr>
 		</article>
-		
+		-->
 	</div>
 	<div class="col-sm-2"></div>
 </div>
