--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="/">Home</a></li>
 				<li><a href="projects">Projects</a></li>
+				<li><a href="about">About</a></li>
 				<li><a href="blog">Blog</a></li>
 			</ul>
 		</div>
@@ -71,7 +72,7 @@
 		</div>
 		
 		<div class="col-md-6">
-			<h2><span class="glyphicon glyphicon-blackboard"></span> Showcase</h2>
+			<h2><span class="glyphicon glyphicon-picture"></span> Showcase</h2>
 
 			<img style="max-width:170px; max-height:105px;" src="images/pitch2.jpg">
 			<h3>T-E-Pitch <small> : A real time multiplayer card game</small> </h3>
