--- a/public/about.html
+++ b/public/about.html
@@ -12,7 +12,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-
+<div>Hello</div>
 <!-- <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top"> -->
 
 <!-- https://github.com/BlackrockDigital/startbootstrap-scrolling-nav -->
