adding more project info

--- a/public/about.html
+++ b/public/about.html
@@ -12,7 +12,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<div>Hello</div>
 <!-- <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top"> -->
 
 <!-- https://github.com/BlackrockDigital/startbootstrap-scrolling-nav -->
@@ -52,7 +51,7 @@
 		School. I have been learning Javascript, HTML, and CSS ever since.
 		</p>
 		<img src="images/self3.jpg" style="width: 200px; border-radius: 10px;">
-		<p class="lead">When Im not writing code, I also enjoy Skiing, Golfing, Monitoring Stocks, The NYMets and NYGiants</p>
+		<p class="lead" style="padding:20px 0;">When Im not writing code, I also enjoy Skiing, Golfing, Monitoring Stocks, The NYMets and NYGiants</p>
 	</div>
 	<div class="col-sm-2"></div>
 </div>
