--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,7 @@
 
 <div class="container-fluid bg-4 text-center">
 	<h2>Hi, My name is Stephen, and I am a Javascript Developer</h2>
-	<h3>I am looking to apply all the newest web technologies to both ends of the stack</h3>
-	<h3>My current favorite tools and toys on the web:</h3>
+	<h3>I am looking to apply all the newest web technologies to both ends of the stack<br>My current favorite tools and toys on the web:</h3>
 	
 	<div class="row">
 		<div class="col-md-6">
@@ -76,8 +75,8 @@
 
 			<img style="max-width:170px; max-height:105px;" src="images/pitch2.jpg">
 			<h3>T-E-Pitch <small> : A real time multiplayer card game</small> </h3>
-			<p>Written over the span of the past year, it started out as a simple game to teach myself <code>jQuery</code>, and has evolved into a massive project involving more than Ten JavaScript frameworks! </p>
-			<p>Play now at <span class="glyphicon glyphicon-king"></span><a href="http://www.tepitch.com"> Tepitch.com</a></p>
+			<p>Written over the span of the past year, it started out as a simple front end game to teach myself jQuery, and has evolved into a massive project involving more than Ten JavaScript frameworks on both ends of the stack! </p>
+			<p>Play now at <span class="glyphicon glyphicon-king"></span><a href="http://www.tepitch.com"> Tepitch.com</a> or check out the repo on <img style="width:20px;padding-bottom:10px;" src="images/github-sprite.png"><a href="https://github.com/sshilal1/pitch"> Github</a></p>
 		</div>
 	</div>
 	
