--- a/public/projects.html
+++ b/public/projects.html
@@ -57,8 +57,10 @@
 		<div class="col-sm-4">
 			<h3>A real-time, multiplayer card game.</h3>
 			<p>Play against your friends across the world or against logical AI!<br>
-			Implemented Node, Express, and Socket.io on the back end, using websockets for a simplistic and smooth multiplayer engine, efficiently handling many games at once</p>
-			<h4>Integrated many Javascript frameworks for a modern, responsive, and up-to-date mobile friendly front end</h4>
+			Started as a front end, simple js logic game. Once I got the back end implemented with <code>Node</code>, the project really began to take off.</p>
+			<p><code>Express</code> and <code>Socket.io</code> together on the back end use websockets for a simplistic and smooth multiplayer engine, efficiently handling many games at once. 
+			While using <code>jQuery</code> and <code>InteractJs</code> for a modern, responsive, and up-to-date mobile friendly front end.</p>
+			<p>Hosted on Amazons' Elastic Compute Cloud service, so fees are low and deploying updates is quick and easy </p>
 		</div>
 		<div class="col-sm-4">
 			<div id="pitch-bars" class="column-sports"></div>
@@ -75,7 +77,10 @@
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<h4>Created an interactive map of Anchorage Alaska</h4>
+				<h3>An interactive map of Anchorage, Alaska - Interfacing with the <small><span class="glyphicon glyphicon-registration-mark"></span></small>Google Maps and <small><span class="glyphicon glyphicon-registration-mark"></span></small>Yelp API's</h3>
+				<p>Completed as part of the <a href="https://www.udacity.com/">Udacity</a> Front-End Nanodegree program, I used <code>Ajax</code> to make requests to the 2 APIS, and then
+				display the information cleanly and in order with <code>jQuery</code>, and <code>Knockout</code>.</p>
+				<p>This was also my first endeavor using Github, which I have come to love and use every day.</p>
 			</div>
 			<div class="col-sm-4">
 				<div id="map-bars" class="column-sports"></div>
@@ -91,14 +96,33 @@
 				<img class="project-img" src="images/kioskdesk.jpg">
 			</div>
 		</div>
-		<div class="col-sm-4">
+		<div class="col-sm-6">
 			<h4>Dashboard containng relevant solar panel information</h4>
 		</div>
-		<div class="col-sm-4">
+		<div class="col-sm-2">
 			<div id="dash-bars" class="column-sports"></div>
 		</div>
 	</div>
 	<div class="row odd">	
+		<div class="col-sm-12">
+			<h2><a href="https://github.com/sshilal1/onlineResume">This Site: My Portfolio</a></h2>
+		</div>
+		<div class="col-sm-4" style="text-align: -webkit-center;">	
+			<div style="max-width:350px;">
+				<img class="project-img" src="images/resumedesk.jpg">
+			</div>
+		</div>
+		<div class="col-sm-6">
+			<h3>Hosted on my very own Raspberry Pi<a href="https://www.raspberrypi.org/"><img style="max-width:50px" src="images/raspi-sprite.png"></a> microcomputer</h3>
+			<p>I was not going to include this project for my site, but I felt it was important to promote my love for Raspberry Pi and microcomputers</p>
+			<p>Initally planned to host on another AWS EC2 server, once I found out how easy it was to host on my Pi, I figured I'd save the money and dedicate the Pi to a full time node server!</p>
+			<p>I will have a blog post coming soon with more information on the process, so stay tuned!</p>
+		</div>
+		<div class="col-sm-2">
+			<div id="resume-bars" class="column-sports"></div>
+		</div>
+	</div>
+	<div class="row even">	
 		<div class="col-sm-12">
 			<h2>Fantasy Draft Kit</h2>
 		</div>
