more changes to projects

--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,8 @@
 </div>
 
 <div class="container-fluid bg-4 text-center">
-	<h2>Hi, My name is Stephen, and I am a Javascript Developer</h2>
-	<h3>I am looking to apply all the newest web technologies to both ends of the stack<br>My current favorite tools and toys on the web:</h3>
+	<h1>Hi, My name is Stephen, and I am a Javascript-focused Developer</h1>
+	<h2>I build self-sustaining, interactive web applications using the newest technologies on both ends of the stack<br><br>Here are my current favorite tools and toys on the web:</h2>
 	
 	<div class="row">
 		<div class="col-md-6">
@@ -80,7 +80,7 @@
 		</div>
 	</div>
 	
-	<h3 style="padding:40px 0;">Checkout the <a href="projects"><span class="glyphicon glyphicon-briefcase"></span> Projects</a> page to see what else I've done on the web</h3>
+	<h3 style="padding:40px 0;">Checkout my <a href="projects"><span class="glyphicon glyphicon-briefcase"></span> Projects</a> page to see what else I've done on the web</h3>
 </div>
 
 <div class="jumbotron" style="margin: 0;">
