--- a/public/projects.html
+++ b/public/projects.html
@@ -44,7 +44,7 @@
 
 <div class="container-fluid bg-4 text-center">
 	<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-briefcase"></span> My Projects</h1><br>
-	<h3> Just some of things I have worked on in my spare time.</h3>
+	<h2> Just some of things I have worked on in my spare time.</h2>
 	<div class="row even">
 		<div class="col-sm-12">
 			<h2><a href="http://www.tepitch.com">T-E-Pitch</a></h2>
@@ -77,7 +77,7 @@
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<h3>An interactive map of Anchorage, Alaska - Interfacing with the <small><span class="glyphicon glyphicon-registration-mark"></span></small>Google Maps and <small><span class="glyphicon glyphicon-registration-mark"></span></small>Yelp API's</h3>
+				<h3>An interactive map of Anchorage, Alaska - Interfacing with the Google Maps and Yelp API's</h3>
 				<p>Completed as part of the <a href="https://www.udacity.com/">Udacity</a> Front-End Nanodegree program, I used <code>Ajax</code> to make requests to the 2 APIS, and then
 				display the information cleanly and in order with <code>jQuery</code>, and <code>Knockout</code>.</p>
 				<p>This was also my first endeavor using Github, which I have come to love and use every day.</p>
@@ -97,7 +97,10 @@
 			</div>
 		</div>
 		<div class="col-sm-6">
-			<h4>Dashboard containng relevant solar panel information</h4>
+			<h3>A dashboard displaying information for the solar panels on the roof of the Engineering and Science Building at Binghamton University</h3>
+			<p>As team lead of our Sr. Design Project at my University, I was tasked with managing the creation and implementation of this dashboard.
+			Using Javascript Photoshop, and Bootstrap, our team created the interactive display</p>
+			<p>This was my introduction to web development, and I knew right away it was something I wanted to do</p>
 		</div>
 		<div class="col-sm-2">
 			<div id="dash-bars" class="column-sports"></div>
@@ -124,7 +127,7 @@
 	</div>
 	<div class="row even">	
 		<div class="col-sm-12">
-			<h2>Fantasy Draft Kit</h2>
+			<h2>Fantasy Draft Kit: <small>Not Yet Released</small></h2>
 		</div>
 		<div class="col-sm-4" style="text-align: -webkit-center;">	
 			<div style="max-width:350px;">
@@ -132,8 +135,9 @@
 			</div>
 		</div>
 		<div class="col-sm-4">
-			<h4>A fantasy football draft kit</h4>
-			<p>Scrape the web for fantasy football rankings, and organize players and stats for an easy draft kit</p>
+			<h3>A fantasy football draft kit, managed by <a href="https://facebook.github.io/react/"> React </a> and <a href="materialui.com">Material UI</a></h3>
+			<p>This application scrapes the web using <code>Cheerio</code> for fantasy football rankings and statistics.</p>
+			<p>Organize players by a filter of your choice, compare rankings, favorite your picks, and have a clear representation of stats for every season of every player.</p>
 		</div>
 		<div class="col-sm-4">
 			<div id="draft-bars" class="column-sports"></div>
