more about text

--- a/public/about.html
+++ b/public/about.html
@@ -44,14 +44,19 @@
 	<div class="col-sm-2"></div>
 	<div class="col-sm-8 text-center">
 		<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-user"></span> About Me</h1><br>
-		<h2>Hi, My name is Stephen, and I am an avid web developer</h2>
-		<p class="lead">I am an eager Javascript programmer, with a strong background in software development.
-		Graduating from Binghamton University, I have been a Verification Engineer for the past 2 years, so test-driven development is important to my projects.
-		My interest in web development started my Sr year of college, when our team had to design a dashboard panel for the Engineering and Science Building at the
-		School. I have been learning Javascript, HTML, and CSS ever since.
-		</p>
+		<h2>Currently, I am a Verification Engineer at <a href="https://www.crestron.com"><img style="max-width:200px" src="images/crestron-logo-long.png"></a> Electronics</h2>
+		
+		<p class="lead">I am responsible for creating and executing test plans to adequately verify features across a range of Digital Media products.</P>
+		<p class="lead">Being a test engineer for the past 3 years at crestron has made test-driven development my mantra, and I am always testing while coding.
+		 I am also always looking to apply web technologies to everything I can.</p>
+		<p class="lead">I pioneered a new method of testing Crestron products through web requests</p>	
+		<p class="lead">Read more about my work at Crestron by looking at my resume</p>
+		
+		<p class="lead">My interest in web development started my Sr year of college, when our team had to design a dashboard panel for the Engineering and Science Building at the
+		School. I have been learning Javascript, HTML, and CSS ever since.</p>
+		
 		<img src="images/self3.jpg" style="width: 200px; border-radius: 10px;">
-		<p class="lead" style="padding:20px 0;">When Im not writing code, I also enjoy Skiing, Golfing, Monitoring Stocks, The NYMets and NYGiants</p>
+		<p class="lead" style="padding:20px 0;">When Im not writing code, I also enjoy Skiing, Golfing, Volleyball, Playing piano, Reading, Trading stocks, and rooting for the NY Mets (unfortunately) and the NY Giants</p>
 	</div>
 	<div class="col-sm-2"></div>
 </div>
