--- a/public/projects.html
+++ b/public/projects.html
@@ -140,7 +140,7 @@
 			<p>Organize players by a filter of your choice, compare rankings, favorite your picks, and have a clear representation of stats for every season of every player.</p>
 		</div>
 		<div class="col-sm-4">
-			<div id="draft-bars" class="column-sports"></div>
+			<div id="draft-bars" class="column-sports" style="padding:0;"></div>
 		</div>
 	</div>
 </div>
