--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
 <div class="container-fluid bg-4 text-center">
 	<h1>Hi, My name is Stephen, and I am a Javascript-focused Developer</h1>
-	<h2>I build self-sustaining, interactive web applications using the newest technologies on both ends of the stack<br><br>Here are my current favorite tools and toys on the web:</h2>
+	<h2>I build self-sustaining, interactive web applications using the newest technologies on both ends of the stack<br>Here are my current favorite tools and toys on the web:</h2>
 	
 	<div class="row">
 		<div class="col-md-6">
