cleaned up about page, added udacity and binghamton

--- a/public/about.html
+++ b/public/about.html
@@ -50,9 +50,14 @@
 		I also pioneered a new method of testing Crestron products through web requests, which is now used across the company. I have always been eager to bring my love of web development to work related issues.</p>
 		
 		<p class="lead">Being a test engineer for the past 3 years at crestron has made test-driven development my mantra, and I brought that style of coding to all of my web development projects.</p>
-		<p class="lead">Read more about my work at Crestron by checking out my <a href="Resume_Stephen_Shilale.pdf">Resume</a></p>
+		<p class="lead">Read more about my work by checking out my <a href="Resume_Stephen_Shilale.pdf">Resume</a></p>
 		
 		<img src="images/self3.jpg" style="width: 200px; border-radius: 10px;">
+		
+		<h2><span class="glyphicon glyphicon-education"></span> Education</h2>
+		<h3>Bachelors of Computer Engineering, 2015 <a href="https://www.binghamton.edu/watson/index.html"><img style="max-width:250px; margin:10px;" src="images/bing-logo-long.png"></a>
+		<h3>Front End Developer Nanodegree, 2016 <a href="https://www.udacity.com"><img style="max-width:200px; margin:10px;" src="images/udacity-logo-long.png"></a>
+		<br><br>
 		<p class="lead" style="padding:20px 0;">When Im not writing code, I also enjoy Skiing, Golfing, Volleyball, Playing piano, Reading, Trading stocks, and rooting for the NY Mets (unfortunately) and the NY Giants</p>
 	</div>
 	<div class="col-sm-2"></div>
