read from html file and write title to it, need createArticle function

--- a/public/blog.html
+++ b/public/blog.html
@@ -51,6 +51,7 @@
 	<div class="container-fluid col-sm-8 even text-center">
 		<h2>Nothing here yet</h2>
 		<h3>Stay tuned!</h3>
+		Hosting a Node.js application on a Rapberry Pi
 		<!--
 		<article>
 			<h2>Hosting your site on a Raspberry Pi using Node.js</h2>
