--- a/public/projects.html
+++ b/public/projects.html
@@ -45,7 +45,26 @@
 <div class="container-fluid bg-4 text-center">
 	<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-briefcase"></span> My Projects</h1><br>
 	<h2> Just some of things I have worked on in my spare time.</h2>
-	<div class="row even">
+	<div class="row even">	
+		<div class="col-sm-12">
+			<h2>Fantasy Draft Kit: <small>Not Yet Released</small></h2>
+		</div>
+		<div class="col-sm-4" style="text-align: -webkit-center;">	
+			<div style="max-width:350px;">
+				<!--<div class="project-img"><div id="comingsoon">Coming Soon<br>Currently In Development</div></div>-->
+				<img class="project-img" src="images/fantasykit.jpg">
+			</div>
+		</div>
+		<div class="col-sm-4">
+			<h3>A fantasy football draft kit, designed with <a href="https://facebook.github.io/react/"> React </a> and <a href="materialui.com">Material UI</a> on the front-end, with <a href="http://nodejs.org">Node</a> and <a href="https://cheerio.js.org/">Cheerio</a> on the back-end</h3>
+			<p>This application scrapes the web using <code>Cheerio</code> and <code>Request-Promises</code> for fantasy football rankings and statistics.</p>
+			<p>Organize players by a filter of your choice, compare rankings, favorite your picks, and have a clear representation of stats for every season of every player, giving users an all-in-one kit for their drafts</p>
+		</div>
+		<div class="col-sm-4">
+			<div id="draft-bars" class="column-sports" style="padding:0;"></div>
+		</div>
+	</div>
+	<div class="row odd">
 		<div class="col-sm-12">
 			<h2><a href="http://www.tepitch.com">T-E-Pitch</a></h2>
 		</div>
@@ -64,6 +83,25 @@
 		</div>
 		<div class="col-sm-4">
 			<div id="pitch-bars" class="column-sports"></div>
+		</div>
+	</div>
+	<div class="row even">	
+		<div class="col-sm-12">
+			<h2><a href="https://github.com/sshilal1/onlineResume">This Site: My Portfolio</a></h2>
+		</div>
+		<div class="col-sm-4" style="text-align: -webkit-center;">	
+			<div style="max-width:350px;">
+				<img class="project-img" src="images/resumedesk.jpg">
+			</div>
+		</div>
+		<div class="col-sm-6">
+			<h3>Hosted on my very own Raspberry Pi<a href="https://www.raspberrypi.org/"><img style="max-width:50px" src="images/raspi-sprite.png"></a> microcomputer</h3>
+			<p>I was not going to include this project for my site, but I felt it was important to promote my love for Raspberry Pi and microcomputers</p>
+			<p>Initally planned to host on another AWS EC2 server, once I found out how easy it was to host on my Pi, I figured I'd save the money and dedicate the Pi to a full time node server!</p>
+			<p>I will have a blog post coming soon with more information on the process, so stay tuned!</p>
+		</div>
+		<div class="col-sm-2">
+			<div id="resume-bars" class="column-sports"></div>
 		</div>
 	</div>
 	<section>
@@ -106,45 +144,7 @@
 			<div id="dash-bars" class="column-sports"></div>
 		</div>
 	</div>
-	<div class="row odd">	
-		<div class="col-sm-12">
-			<h2><a href="https://github.com/sshilal1/onlineResume">This Site: My Portfolio</a></h2>
-		</div>
-		<div class="col-sm-4" style="text-align: -webkit-center;">	
-			<div style="max-width:350px;">
-				<img class="project-img" src="images/resumedesk.jpg">
-			</div>
-		</div>
-		<div class="col-sm-6">
-			<h3>Hosted on my very own Raspberry Pi<a href="https://www.raspberrypi.org/"><img style="max-width:50px" src="images/raspi-sprite.png"></a> microcomputer</h3>
-			<p>I was not going to include this project for my site, but I felt it was important to promote my love for Raspberry Pi and microcomputers</p>
-			<p>Initally planned to host on another AWS EC2 server, once I found out how easy it was to host on my Pi, I figured I'd save the money and dedicate the Pi to a full time node server!</p>
-			<p>I will have a blog post coming soon with more information on the process, so stay tuned!</p>
-		</div>
-		<div class="col-sm-2">
-			<div id="resume-bars" class="column-sports"></div>
-		</div>
-	</div>
-	<div class="row even">	
-		<div class="col-sm-12">
-			<h2>Fantasy Draft Kit: <small>Not Yet Released</small></h2>
-		</div>
-		<div class="col-sm-4" style="text-align: -webkit-center;">	
-			<div style="max-width:350px;">
-				<div class="project-img"><div id="comingsoon">Coming Soon<br>Currently In Development</div></div>
-			</div>
-		</div>
-		<div class="col-sm-4">
-			<h3>A fantasy football draft kit, managed by <a href="https://facebook.github.io/react/"> React </a> and <a href="materialui.com">Material UI</a></h3>
-			<p>This application scrapes the web using <code>Cheerio</code> for fantasy football rankings and statistics.</p>
-			<p>Organize players by a filter of your choice, compare rankings, favorite your picks, and have a clear representation of stats for every season of every player.</p>
-		</div>
-		<div class="col-sm-4">
-			<div id="draft-bars" class="column-sports" style="padding:0;"></div>
-		</div>
-	</div>
 </div>
-
 <div class="jumbotron" style="margin: 0;">
   <div class="container text-center">
 	<h4><span class="glyphicon glyphicon-copyright-mark"></span> Stephen Shilale</h4>
