--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,8 @@
 </div>
 
 <div class="container-fluid bg-4 text-center">
-	<h1>Hi, My name is Stephen, and I am a Web Application Developer</h1>
-	<h2>I build self-sustaining, interactive web applications using the newest technologies on both ends of the stack<br>Here are my current favorite tools and toys on the web:</h2>
+	<h1>I build self-sustaining, interactive web applications using the newest technologies on both ends of the stack, with a focus on Javascript and ES6 features</h1>
+	<h2>Here are my current favorite tools and toys on the web:</h2>
 	
 	<div class="row">
 		<div class="col-md-6">
