modified fantasy project page

--- a/public/projects.html
+++ b/public/projects.html
@@ -47,7 +47,7 @@
 	<h2> Just some of things I have worked on in my spare time.</h2>
 	<div class="row even">	
 		<div class="col-sm-12">
-			<h2>Fantasy Draft Kit: <small>Not Yet Released</small></h2>
+			<h2><a href="http://www.fantasydraftkit.org">Fantasy Football Draft Kit</a></h2>
 		</div>
 		<div class="col-sm-4" style="text-align: -webkit-center;">	
 			<div style="max-width:350px;">
@@ -57,7 +57,7 @@
 		</div>
 		<div class="col-sm-4">
 			<h3>A fantasy football draft kit, designed with <a href="https://facebook.github.io/react/"> React </a> and <a href="materialui.com">Material UI</a> on the front-end, with <a href="http://nodejs.org">Node</a> and <a href="https://cheerio.js.org/">Cheerio</a> on the back-end</h3>
-			<p>This application scrapes the web using <code>Cheerio</code> and <code>Request-Promises</code> for fantasy football rankings and statistics.</p>
+			<p>This application scrapes the web using <code>Cheerio</code> and <code>MySQL</code> for fantasy football rankings and statistics.</p>
 			<p>Organize players by a filter of your choice, compare rankings, favorite your picks, and have a clear representation of stats for every season of every player, giving users an all-in-one kit for their drafts</p>
 		</div>
 		<div class="col-sm-4">
