optimizing rendering by removing reflow

--- a/public/projects.html
+++ b/public/projects.html
@@ -42,7 +42,7 @@
 	</div>
 </nav>
 
-<div class="container-fluid bg-4 text-center">
+<div id="projects-container" class="container-fluid bg-4 text-center">
 	<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-briefcase"></span> My Projects</h1><br>
 	<h2> Just some of things I have worked on in my spare time.</h2>
 	<div class="row even">	
@@ -155,6 +155,7 @@
 </body>
 
     <!-- My Service Bars -->
-	<script src="lib/servicebars.js"></script>    
+	<script src="lib/servicebars.js"></script>
+	<script src="projects.js"></script>
 
 </html>
