--- a/public/projects.html
+++ b/public/projects.html
@@ -45,25 +45,7 @@
 <div id="projects-container" class="container-fluid bg-4 text-center">
 	<h1 style="font-weight: bold;" ><span class="glyphicon glyphicon-briefcase"></span> My Projects</h1><br>
 	<h2> Just some of things I have worked on in my spare time.</h2>
-	<div class="row even">	
-		<div class="col-sm-12">
-			<h2><a href="http://www.fantasydraftkit.org">Fantasy Football Draft Kit</a></h2>
-		</div>
-		<div class="col-sm-4" style="text-align: -webkit-center;">	
-			<div style="max-width:350px;">
-				<!--<div class="project-img"><div id="comingsoon">Coming Soon<br>Currently In Development</div></div>-->
-				<img class="project-img" src="images/fantasykit.jpg">
-			</div>
-		</div>
-		<div class="col-sm-4">
-			<h3>A fantasy football draft kit, designed with <a href="https://facebook.github.io/react/"> React </a> and <a href="materialui.com">Material UI</a> on the front-end, with <a href="http://nodejs.org">Node</a> and <a href="https://cheerio.js.org/">Cheerio</a> on the back-end</h3>
-			<p>This application scrapes the web using <code>Cheerio</code> and <code>MySQL</code> for fantasy football rankings and statistics.</p>
-			<p>Organize players by a filter of your choice, compare rankings, favorite your picks, and have a clear representation of stats for every season of every player, giving users an all-in-one kit for their drafts</p>
-		</div>
-		<div class="col-sm-4">
-			<div id="draft-bars" class="column-sports" style="padding:0;"></div>
-		</div>
-	</div>
+	
 	<div class="row odd">
 		<div class="col-sm-12">
 			<h2><a href="http://www.tepitch.com">T-E-Pitch</a></h2>
@@ -153,9 +135,9 @@
 </div>
 
 </body>
-
-    <!-- My Service Bars -->
+	
+	<script src="projectsJson.js"></script>
+  <script src="projects.js"></script>
 	<script src="lib/servicebars.js"></script>
-	<script src="projects.js"></script>
-
+	
 </html>
